--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ requires-python = ">= 3.9"
 dependencies = [
     "click",
     "matplotlib",
+    "mwalib",
+    "healpy",
     "numpy",
     "ruff",
 ]
