--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,14 +8,19 @@ authors = [
 ]
 license = { file = "LICENSE" }
 readme = { file = "README.md", content-type = "text/markdown" }
-requires-python = ">= 3.9"
+requires-python = ">= 3.10"
 dependencies = [
-    "click",
-    "matplotlib",
-    "mwalib",
-    "healpy",
-    "numpy",
-    "ruff",
+    "astropy>=5.0",
+    "click>=8.0.0",
+    "healpy>=1.16.0",
+    "matplotlib>=3.5.0",
+    "mwa-hyperbeam>=0.9.0",
+    "mwalib>=1.8.4",
+    "numpy>=1.23.0,<2",
+    "requests>=2.32.3",
+    "ruff>=0.9.3",
+    "scipy>=1.12.0",
+    "setuptools>=75.8.0",
 ]
 
 [project.scripts]
@@ -25,10 +30,13 @@ fluxcal = "mwa_vcs_fluxcal.apps.fluxcal:main"
 requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
+[tool.setuptools.package-data]
+mwa_vcs_fluxcal = ["data/*"]
+
 [tool.ruff]
 line-length = 100
 indent-width = 4
-target-version = "py39"
+target-version = "py310"
 include = [
     "pyproject.toml",
     "src/mwa_vcs_fluxcal/*.py",
