--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ requires-python = ">= 3.10"
 dependencies = [
     "astropy>=5.0",
     "click>=8.0.0",
+    "cmasher>=1.9.2",
     "healpy>=1.16.0",
     "matplotlib>=3.5.0",
     "mwa-hyperbeam>=0.9.0",
