--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "numpy>=1.23.0,<2",
     "requests>=2.32.3",
     "ruff>=0.9.3",
+    "scikit-image>=0.25.1",
     "scipy>=1.12.0",
     "setuptools>=75.8.0",
 ]
