--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "scikit-image>=0.25.1",
     "scipy>=1.12.0",
     "setuptools>=75.8.0",
+    "tqdm>=4.67.1",
 ]
 
 [project.scripts]
